[package]
name = "mahjong"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "0.6.9"
log = "0.4.8"
num-derive = "0.3.0"
num-traits = "0.2.8"
thiserror = "1.0.30"

[dev-dependencies.env_logger]
version = "*"
default-features = false
